[build-system]
requires = ["setuptools>=48.0", "wheel", "setuptools_scm[toml]>=3.4", "setuptools_scm_git_archive>=1.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev" # guess-next-dev or post-release
write_to = "src/jinjyaml/version.py"

[tool.autopep8]
max_line_length = 127
