[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinjyaml"
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "Application specific YAML tag of Jinja2 template"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "jinja",
    "jinja2",
    "template",
    "template-engine",
    "yaml",
    "yml",
    "yaml-tag",
    "PyYAML",
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python",
]
dependencies = [
    "Jinja2>=3.0,<4.0",
    "PyYAML>=5.0,<7.0",
    "typing-extensions; python_version<'3.11'",
]
dynamic = ["version"]

[project.urls]
homepage = "https://pypi.org/project/jinjyaml/"
documentation = "https://jinjyaml.readthedocs.io/"
repository = "https://github.com/tanbro/jinjyaml"
changelog = "https://github.com/tanbro/jinjyaml/blob/master/CHANGELOG.md"

[dependency-groups]
dev = ["pre-commit", { include-group = "typing" }]
test = ["coverage"]
docs = [
    'Sphinx>=7.0.1',
    'importlib_metadata;python_version<"3.8"',
    'furo',
    'linkify-it-py',
    'myst-parser',
    'sphinx-copybutton',
    'sphinx-inline-tabs',
    'sphinx_tippy',
]
typing = ["types-PyYAML"]

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
pyyaml_include = ["jinjyaml/py.typed"]

[tool.setuptools_scm]
# version_scheme = "guess-next-dev"    # guess-next-dev or post-release
write_to = "src/jinjyaml/_version.py"
