[metadata]
name = jinjyaml
description = Application specific YAML tag of Jinja2 template
url = https://github.com/tanbro/jinjyaml
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = jinja, jinja2, template, template-engine, yaml, yaml-tag
long_description = file: README.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.5
install_requires =
    Jinja2~=3.0
    PyYAML>=5.0,<7.0

[options.packages.find]
where = src
